<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cricket"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/team_a"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#616161"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/score1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/defaultA"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="#000000"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/seprate"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="#000000"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/wickets1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/defaultA"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="#000000"
                    android:textSize="36sp" />

            </LinearLayout>

            <Button
                android:id="@+id/singlesA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:onClick="SingleRunsOfTeamA"
                android:text="@string/singles" />

            <Button
                android:id="@+id/fourA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="FourRunsOfTeamA"
                android:text="@string/fourRuns" />

            <Button
                android:id="@+id/sixA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="SixRunsOfTeamA"
                android:text="@string/sixRun" />

            <Button
                android:id="@+id/wicketA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="WicketDownOfTeamA"
                android:text="@string/wickets" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/team_b"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#616161"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/score2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/defaultA"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="#000000"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/seprate"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="#000000"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/wickets2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:padding="8dp"
                    android:text="@string/defaultA"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="#000000"
                    android:textSize="36sp" />

            </LinearLayout>

            <Button
                android:id="@+id/singlesB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:onClick="SingleRunsOfTeamB"
                android:text="@string/singles" />

            <Button
                android:id="@+id/fourB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="FourRunsOfTeamB"
                android:text="@string/fourRuns" />

            <Button
                android:id="@+id/sixB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="SixRunsOfTeamB"
                android:text="@string/sixRun" />

            <Button
                android:id="@+id/wicketB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="24dp"
                android:onClick="WicketDownOfTeamB"
                android:text="@string/wickets" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="ResetScores"
        android:text="@string/reset" />

</RelativeLayout>